--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // For Spring Security minimal
     compile('org.springframework.boot:spring-boot-starter-security')
     //compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
+    compile('org.springframework.boot:spring-boot-starter-security')
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
