--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
     port: 18804
 
   datasource:
-    url: jdbc:mysql://localhost:3306/stest?createDatabaseIfNotExist=true
+    url: jdbc:mysql://127.0.0.1:3306/stest?createDatabaseIfNotExist=true
     username: root
-    password: admin
+    password:
     driver-class-name: com.mysql.jdbc.Driver
     platform: mysql
 
